rnsc/test_data/integration/error/parser/method_directive/access_flags/module.rns
.class MethodWithModuleFlag
.super java/lang/Object

.method module main ()V
.method_end
.class_end
